<resources>
    <string name="app_name">maike+ watch</string>


    <string name="pscenter_mine">我</string>
    <string name="pscenter_userinfo_intro_globle">个人目标</string>
    <string name="pscenter_userinfo_intro_betteryleft">电池剩余</string>
    <string name="pscenter_userinfo_intro_bind">绑定手表</string>
    <string name="pscenter_funclist_psinfo">个人信息</string>
    <string name="pscenter_funclist_calling">来电提醒</string>
    <string name="pscenter_funclist_alertalarm">智能闹钟</string>
    <string name="pscenter_funclist_aboutus">关于软件</string>
    <string name="home_line_onedata_bushu">步数</string>
    <string name="home_line_onedata_reliang">热量</string>
    <string name="home_line_onedata_licheng">里程</string>
    <string name="home_today_data_str">今日数据</string>
    <string name="psinfo_list_loginname">用户名</string>
    <string name="psinfo_list_sex">性别</string>
    <string name="psinfo_list_age">年龄（岁）</string>
    <string name="psinfo_list_height">身高（厘米）</string>
    <string name="psinfo_list_weight">体重（公斤）</string>
    <string name="ps_global_step_str">目标步数</string>
    <string name="ps_global_step_step">步</string>
    <string name="psinfo_list_headpic">头像</string>
    <string name="about_us_list_gujianname">当前手表固件版本</string>
    <string name="about_us_list_currentversion">当前版本</string>
    <string name="psinfo_list_check_newversion">检查新版本</string>
    <string name="about_us_list_ischeck_str">是否自动检查最新版本</string>
    <string name="tv_bind_help_question1">手表是否在手机附近？</string>
    <string name="tv_bind_help_answer1">手表离手机越近越容易连接上蓝牙，请确认手表在手机附近。</string>
    <string name="tv_bind_help_question2">手表电池是否耗尽？</string>
    <string name="tv_bind_help_answer2">如果手表和手机距离很近还是没有连上，可能手表没电了，请更换电池。</string>
    <string name="tv_bind_help_question3">手表与其他手机绑定？</string>
    <string name="tv_bind_help_answer3">如果你的手表已绑定其他手机，并且绑定的手机在手表附近，这时你需要关闭已绑定手机的蓝牙功能，或者在该手机上解绑手表，然后重新使用要绑定的手机与手表绑定。</string>
    <string name="one_alarm_set_alarm_time_str">设置闹钟时间</string>
    <string name="one_alarm_week_sunday">周日</string>
    <string name="one_alarm_week_monday">周一</string>
    <string name="one_alarm_week_tuesday">周二</string>
    <string name="one_alarm_week_thirsday">周三</string>
    <string name="one_alarm_week_wednesday">周四</string>
    <string name="one_alarm_week_fridayday">周五</string>
    <string name="one_alarm_week_saturday">周六</string>
    <string name="pscenter_user_logout">退出登录</string>
    <string name="user_login_creative_live">创意生活</string>
    <string name="history_data_week_str">最近7天数据</string>
    <string name="history_data_month_str">最近30天数据</string>
    <string name="tv_bind_help_question4">手表同步不了数据？</string>
    <string name="tv_bind_help_answer4">如果多次点击同步，同步不了数据时，1-请检查电池是否有电，并确保电池安装正确；手表重新安装电池，会亮灯几秒后熄灭，表示安装成功。2-检查是否打开蓝牙和WiFi。</string>
</resources>
