<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical"
    tools:context="com.maikeapp.maikewatch.activity.PsGlobalActivity">
    <include layout="@layout/layout_common_topbar_action">
    </include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_bg_line_border"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/common_white_color"
        android:layout_marginTop="@dimen/common_content_margin_top"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_bg_line_border"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_alarm_set_alarm_time_str"
            android:textColor="@color/common_content_dark_text_font_color"
            android:textSize="@dimen/common_content_text_font_size"
            android:layout_marginTop="@dimen/ps_global_step_margin_top"
            android:layout_marginLeft="@dimen/ps_global_step_margin_left"
            android:layout_marginRight="@dimen/ps_global_step_margin_left"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/one_alarm_bg_line_border"
            android:layout_marginTop="@dimen/ps_global_step_margin_top"
            android:layout_marginLeft="@dimen/ps_global_step_margin_left"
            android:layout_marginRight="@dimen/ps_global_step_margin_left"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/ps_global_step_line_margin_top"
            android:layout_marginLeft="@dimen/ps_global_step_margin_left"
            android:layout_marginRight="@dimen/ps_global_step_margin_left"

            >

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_sunday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_monday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_tuesday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_thirsday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_thirsday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_wednesday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_fridayday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_one_alarm_week_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/one_alarm_week_one_margin_left_or_right">
                <CheckBox
                    android:layout_width="@dimen/one_alarm_week_one_width"
                    android:layout_height="@dimen/one_alarm_week_one_height"
                    android:gravity="center"
                    style="@style/OneWeekCheckBox"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/one_alarm_week_saturday"
                    android:textColor="@color/common_white_color"
                    android:textSize="@dimen/common_content_text_font_size"
                    />
            </RelativeLayout>
        </LinearLayout>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ps_global_step_margin_top"></TimePicker>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_bg_line_border"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>

