<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg_color"
    tools:context="com.maikeapp.maikewatch.activity.PsInfoActivity">

    <include layout="@layout/layout_common_topbar_action"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/pscenter_bg_border_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/common_white_color"
        android:layout_marginTop="@dimen/common_content_margin_top"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"/>

        <!--头像 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_headpic"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/pscenter_userinfo_headpic"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"
            android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"/>
        <!--头像 end-->

        <!--昵称 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_loginname"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="test"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"
            android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"/>
        <!--昵称 end-->

        <!--性别 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_sex"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="男"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"
            android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"/>
        <!--性别 end-->


        <!--年龄 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_age"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:text="25"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"
            android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"/>
        <!--年龄 end-->

        <!--身高 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_height"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:text="165"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"
            android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"/>
        <!--身高 end-->


        <!--体重 start-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/pscenter_funclist_list_item_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/psinfo_list_weight"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginLeft="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:text="50"
                android:textColor="@color/common_content_dark_text_font_color"
                android:textSize="@dimen/common_content_text_font_size"
                android:layout_marginRight="@dimen/pscenter_funclist_list_item_img_margin_left"
                />

        </LinearLayout>

        <!--体重 end-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/pscenter_bg_border_color"/>
    </LinearLayout>
</LinearLayout>
